# Sem3Laba2

./: .gitignore  CMakeLists.txt  DataGenerator.h  DynamicArray.h  FunctionalTests.h  HeapSorter.h  ISequence.h  ISorter.h  InsertionSorter.h  Menu.h  MergeSorter.h  NameDatabase.h  PerformanceTests.h  Person.h  Sequence.h  SortBy.h  SortComparer.h  main.cpp
